feat: :sparkles: Frontend working properly, showing products list an filtering products by tag name

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@ APP_SECRET=
 
 #For mysql database
 DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=mariadb-10.5.18"
+
+MESSENGER_TRANSPORT_DSN=doctrine://default
